backend/infrastructure/kubernetes/pgbouncer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgbouncer
  namespace: tumago
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pgbouncer
  template:
    metadata:
      labels:
        app: pgbouncer
    spec:
      containers:
        - name: pgbouncer
          image: bitnami/pgbouncer:1.22.1
          ports:
            - containerPort: 5432
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "300m"
---
apiVersion: v1
kind: Service
metadata:
  name: pgbouncer-service
  namespace: tumago
spec:
  selector:
    app: pgbouncer
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
